--- a/cfp-panel.css
+++ b/cfp-panel.css
@@ -24,8 +24,8 @@ body {
 	z-index: 1010;
 }
 
-.Proposal form {
-	display: none;
+.Proposal form { /* to hide form for hardcore Users */
+	/*display: none;*/
 }
 
 #panel {
